# rustgraphics

./: Cargo.toml
src/: behaviors.rs  camera.rs  cube.mtl  gllib.rs  main.rs  scenes.rs
src/models/: _materials.mtl
src/shaders/blinn_phong_shader/: fragment.GLSL  vertex
src/shaders/example_shader/: fragment  vertex.GLSL
src/shaders/param_blinn_phong_shader/: fragment  fragment.GLSL  vertex.GLSL
src/shaders/texture_shader/: fragment.GLSL
src/shaders/two_texture_shader/: fragment.GLSL  vertex
src/shaders/uniform_shader/: fragment  vertex  vertex.GLSL
