[package]
name = "rustproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
ultraviolet = "0.9.0"
beryllium = "0.2.0-alpha.4"
image = "0.24.2"
rand = "0.5.5"

